apps/dssp-targetp-16/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dssp-targetp-16
  namespace: prod
  labels:
    app: dssp-targetp-16
    backstage.io/kubernetes-id: dssp-targetp-16
    environment: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dssp-targetp-16
  template:
    metadata:
      labels:
        app: dssp-targetp-16
        backstage.io/kubernetes-id: dssp-targetp-16
        environment: prod
    spec:
      containers:
        - name: dssp-targetp-16
          image: chaitanyapandeygspann/dssp-targetp-16:1.0.2
          ports:
            - containerPort: 5000
