apps/dssp-targetp-16/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dssp-targetp-16
  namespace: prod
  labels:
    backstage.io/kubernetes-id: dssp-targetp-16
    environment: prod
spec:
  selector:
    app: dssp-targetp-16
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
