apps/dssp-targetp-16/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dssp-targetp-16
  namespace: prod
  labels:
    backstage.io/kubernetes-id: dssp-targetp-16
    environment: prod
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /dssp-targetp-16-prod(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: dssp-targetp-16
                port:
                  number: 80
